--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/mdb.min.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
-	<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet"> 
 
 	<style>
-	/** {
-		font-family: 'Nunito', sans-serif;
-	}*/
+		@font-face {
+			src: url('fonts/Nunito/Nunito-Regular.ttf');
+			font-family: Nunito
+		}
+
+		body {
+			font-family: Nunito
+		}
+
 		.peq {
 			font-size: 20px;
 			font-style: oblique;
